gcc/testsuite/rust/rustc/ui/parser/keyword-box-as-identifier.rs
fn main() {
    let box = "foo"; // { dg-error "" "" { target *-*-* } }
}

